# dkod-engine

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  run_read_pr.py  run_submit.py
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/hooks/: block-sensitive-files.sh  cargo-check-pre-commit.sh  cargo-fmt-pre-commit.sh  cargo-test-on-edit.sh
.claude/skills/proto-sync/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.devin/: wiki.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/dk-agent-sdk/: Cargo.toml
crates/dk-agent-sdk/src/: client.rs  error.rs  lib.rs  session.rs  tools.rs  types.rs
crates/dk-agent-sdk/tests/: workflow_test.rs
crates/dk-analytics/src/: materialized_views.sql
crates/dk-cli/: Cargo.toml  build.rs
crates/dk-cli/src/: auth.rs  client.rs  config.rs  grpc.rs  main.rs  output.rs  session.rs  util.rs
crates/dk-cli/src/commands/: add.rs  admin.rs  agent.rs  analytics.rs  branch.rs  cat.rs  check.rs  checkout.rs  clone.rs  commit.rs  context.rs  device_login.rs  diff.rs  files.rs  git_merge.rs  index.rs  init.rs  log.rs  login.rs  logout.rs  ls.rs  mod.rs  pull.rs  push.rs  rebase.rs  remote.rs  repo.rs  search.rs  session_add.rs  session_commit.rs  session_diff.rs  session_init.rs  session_push.rs  session_search.rs  session_status.rs  status.rs  tag.rs  whoami.rs
crates/dk-cli/tests/integration/: add_test.rs  branch_test.rs  checkout_test.rs  clone_test.rs  commit_test.rs  diff_test.rs  init_test.rs  log_test.rs  merge_test.rs  mod.rs  push_pull_test.rs  remote_test.rs  status_test.rs  workflow_test.rs
crates/dk-core/: Cargo.toml
crates/dk-core/src/: error.rs  lib.rs  types.rs
crates/dk-engine/: Cargo.toml
crates/dk-engine/migrations/: 001_initial.sql  002_platform.sql  003_platform_constraints.sql  004_repo_org.sql  005_repo_files.sql  006_changesets.sql  007_verification_pipelines.sql  008_platform_v2.sql  009_changeset_unified.sql  010_session_workspaces.sql  011_changeset_repo_updated_index.sql  012_agent_name.sql  013_changeset_state_machine.sql  016_workspaces_stranded_at.sql  019_backfill_session_workspaces_changeset_id.sql
crates/dk-engine/src/: changeset.rs  lib.rs  metrics.rs  pipeline.rs  repo.rs  storage.rs  tool_ops.rs
crates/dk-engine/src/conflict/: ast_merge.rs  claim_tracker.rs  mod.rs  payload.rs  valkey_claim_tracker.rs
crates/dk-engine/src/git/: mod.rs  objects.rs  repository.rs
crates/dk-engine/src/graph/: callgraph.rs  depgraph.rs  index.rs  mod.rs  symbols.rs  types.rs  vector.rs
crates/dk-engine/src/parser/: engine.rs  lang_config.rs  mod.rs  python_parser.rs  registry.rs  rust_parser.rs  typescript_parser.rs
crates/dk-engine/src/workspace/: cache.rs  conflict.rs  event_bus.rs  merge.rs  mod.rs  overlay.rs  session_graph.rs  session_manager.rs  session_workspace.rs  valkey_cache.rs
crates/dk-engine/tests/: ast_merge_test.rs  csharp_parser_test.rs  engine_test.rs  graph_callgraph_test.rs  graph_symbols_test.rs  haskell_parser_test.rs  julia_parser_test.rs  lang_config_test.rs  parser_registry_test.rs  php_parser_test.rs  python_query_parser_test.rs  ruby_parser_test.rs  rust_query_parser_test.rs  scala_parser_test.rs  search_index_test.rs  session_graph_serde_test.rs  ts_query_parser_test.rs  valkey_cache_test.rs
crates/dk-engine/tests/integration/: conflict_claim_test.rs  nsi_git_ops_test.rs  (+3 more)
crates/dk-mcp/: Cargo.toml
crates/dk-mcp/src/: auth.rs  gateway.rs  lib.rs  review_gate.rs  server.rs  state.rs
crates/dk-mcp/tests/: e2e_test.rs
crates/dk-protocol/: Cargo.toml  build.rs
crates/dk-protocol/proto/dkod/v1/: agent.proto  types.proto
crates/dk-protocol/src/: abandon.rs  approve.rs  auth.rs  close.rs  connect.rs  context.rs  events.rs  file_list.rs  file_read.rs  file_write.rs  lib.rs  merge.rs  metrics.rs  pre_submit.rs  push.rs  record_review.rs  require_live_session.rs  resolve.rs  review.rs  server.rs  session.rs  session_redis.rs  session_status.rs  session_store.rs  stale_overlay.rs  submit.rs  validation.rs  verify.rs  watch.rs
crates/dk-protocol/tests/: agent_name_test.rs  approve_proto_test.rs  session_test.rs  submit_overlay_test.rs
crates/dk-runner/: Cargo.toml
crates/dk-runner/src/: changeset.rs  findings.rs  lib.rs  runner.rs  scheduler.rs
crates/dk-runner/src/executor/: container.rs  mod.rs  process.rs
crates/dk-runner/src/steps/: command.rs  mod.rs
crates/dk-runner/src/steps/agent_review/: claude.rs  mod.rs  openrouter.rs  parse.rs  prompt.rs  provider.rs
crates/dk-runner/src/steps/human_approve/: mod.rs  types.rs
crates/dk-runner/src/steps/semantic/: checks.rs  compat.rs  context.rs  mod.rs  quality.rs  safety.rs
crates/dk-runner/src/workflow/: parser.rs  types.rs  validator.rs
crates/dk-runner/tests/: workflow_test.rs
crates/dk-server/: Cargo.toml
crates/dk-server/src/: main.rs
crates/dk-server/tests/: agent_flow_test.rs  grpc_web_test.rs
docs/plans/: 2026-02-28-protocol-v01-completion-design.md  2026-02-28-protocol-v01-completion.md  2026-04-16-mcp-code-review-gate-design.md  2026-04-16-mcp-code-review-gate-plan.md
docs/superpowers/plans/: 2026-04-18-workspace-eviction-recovery.md
proto/dekode/v1/: agent.proto  types.proto
proto/dkod/v1/: agent.proto
sdk/: dkod-tools.json
sdk/python/: Makefile  pyproject.toml
sdk/python/dekode/: __init__.py  client.py  models.py  session.py  tools.py
sdk/python/dekode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/dekode/_generated/dekode/v1/: agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  types_pb2_grpc.py
sdk/python/dkod/: __init__.py  client.py  dkod-tools.json  models.py  session.py  tools.py
sdk/python/dkod/_generated/: __init__.py
sdk/python/dkod/_generated/dkod/v1/: agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
sdk/python/examples/: claude_agent.py
sdk/python/tests/: conftest.py  test_client.py  test_integration.py  test_mock_server.py  test_models.py  test_public_api.py  test_session.py  test_tools.py
(+46 files in other folders)
