[workspace]
resolver = "2"
members = [
    "crates/dk-core",
    "crates/dk-engine",
    "crates/dk-protocol",
    "crates/dk-server",
    "crates/dk-cli",
    "crates/dk-agent-sdk",
    "crates/dk-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dkod-io/dkod-engine"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Internal crates
dk-core = { path = "crates/dk-core" }
dk-engine = { path = "crates/dk-engine" }
dk-protocol = { path = "crates/dk-protocol" }
dk-runner = { path = "crates/dk-runner" }
