[package]
name = "dk-agent-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
dk-protocol = { path = "../dk-protocol" }
tonic = { version = "0.12", features = ["transport"] }
tokio = { workspace = true }
tokio-stream = "0.1"
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
