[package]
name = "dk-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gix = { version = "0.79", features = ["max-performance", "blocking-network-client"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
toml = "0.8"
serde.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
dirs = "6"
ignore = "0.4"
urlencoding = "2"
walkdir = "2"
rpassword = "7"
dk-agent-sdk = { path = "../dk-agent-sdk" }
dk-protocol = { path = "../dk-protocol" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
