[package]
name = "dk-runner"
version.workspace = true
edition.workspace = true

[dependencies]
dk-core.workspace = true
dk-engine.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
toml = "0.8"
futures = "0.3"
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
